# bhajan

./: .gitignore  AGENTS.md  README.md  RELEASING.md  TESTING.md  install.ps1  install.sh  pyproject.toml  test_gallan_frames.py
src/bhajan/: __init__.py  _demucs_wrapper.py  cli.py  config.py  gui_player.py  karaoke_visuals.py  local_library.py  logger.py  pipeline.py  romanize.py  subprocess_utils.py  utils.py
src/bhajan/stages/: __init__.py  audio_modes.py  download.py  lyrics_fetch.py  normalize.py  render.py  separator.py  separator_audio_separator.py  separator_base.py  separator_demucs.py  subtitles.py  transcription.py  transcription_base.py  transcription_parakeet.py  transcription_whisper.py
tests/: conftest.py  test_demucs_fallback.py  test_local_library.py  test_logger.py  test_lyrics_review.py  test_metadata_lrclib.py  test_pipeline_stages.py  test_romanize.py  test_stream_url_detect.py  test_video_export.py
