[project]
name = "bhajan"
version = "0.1.0"
description = "Cross-platform CLI tool to generate karaoke videos from YouTube songs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp[default]>=2024.0.0",
    "faster-whisper>=1.0.0",
    "demucs<4.1",
    "rich>=13.0.0",
    "click>=8.1.0",
    # PyTorch and TorchAudio publish as a matched release pair.
    "torch==2.11.0",
    "torchaudio==2.11.0",
    "soundfile>=0.13.1",
    "requests>=2.31.0",
    "pygame-ce>=2.5.0",
    "pillow>=11.0.0",
    "indic-transliteration>=2.3.0",
    "rapidfuzz>=3.14.5",
]

[project.scripts]
bhajan = "bhajan.cli:main"

[project.urls]
Homepage = "https://github.com/rithamnatani/bhajan"
Repository = "https://github.com/rithamnatani/bhajan"
Issues = "https://github.com/rithamnatani/bhajan/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bhajan"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform != 'darwin'" },
]
torchaudio = [
    { index = "pytorch-cu126", marker = "sys_platform != 'darwin'" },
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests (require external services)",
]
